Curves: pick select with multi-object edit selects multiple elements #105430

Closed
opened 2023-03-04 07:16:37 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.2.230217

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 23:37, hash: d0cfbc23db81
Worked: n/a

Multi-object edit support was introduced with 00ca7c5221

Short description of error
Pick select with multi-object edit selects adjacent elements from other objects.

Exact steps for others to reproduce the error
CurvesMultiEditPickSelectonIssue.mp4

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.2.230217 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 23:37, hash: `d0cfbc23db81` Worked: n/a Multi-object edit support was introduced with 00ca7c5221 **Short description of error** Pick select with multi-object edit selects adjacent elements from other objects. **Exact steps for others to reproduce the error** [CurvesMultiEditPickSelectonIssue.mp4](/attachments/bafc207d-fa8f-4c85-80d0-13854394b230)
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-04 07:16:37 +01:00
Hans Goudey self-assigned this 2023-03-06 04:25:36 +01:00
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-06 12:49:06 +01:00
Member

Can confirm

Can confirm
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-06 17:18:39 +01:00
Hans Goudey added this to the 3.5 milestone 2023-03-06 17:18:44 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-07 21:40:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105430
No description provided.