Fix #105430: Curves pick select selects multiple objects

Pick select is only meant to change a single element from a single
data-block. However, the operator worked on each object individually
rather than first finding the closest point, then processing the
selection. Change the operator to find the closest point across all
objects, then deselect if necessary, then select the closest point.

Pull Request: https://projects.blender.org/blender/blender/pulls/105495